--- a/about.html
+++ b/about.html
@@ -10,9 +10,9 @@
   <!-- Start Nav  -->
    <nav>
         <div class="logo">
-            <img src="assest/logo/logo.png" alt="لوجو الموقع">
+            <img src="assest/logo/logo.png" alt="لوجو الموقع" />
         </div>
-        <ul  dir="rtl">
+        <ul dir="rtl">
             <li><a href="view.html">الرئيسية</a></li>
             <li><a href="products.html">المنتجات</a></li>
             <li><a href="about.html">تعرف علينا</a></li>
@@ -80,5 +80,6 @@
 
 
 </script>
+<script src="assest/js/script.js"></script>
 </body>
 </html>
