--- a/about.html
+++ b/about.html
@@ -55,10 +55,10 @@
         <div class="social-links">
             <h3>تواصل معنا</h3>
             <ul>
-                <li><a href="www.facebook.com">فيسبوك</a></li>
-                <li><a href="www.instagram.com">إنستغرام</a></li>
-                <li><a href="www.whatsapp.com">واتساب</a></li>
-            </ul>
+                    <li><a href="https://www.facebook.com">فيسبوك</a></li>
+                    <li><a href="https://www.instagram.com">إنستغرام</a></li>
+                    <li><a href="https://www.whatsapp.com">واتساب</a></li>
+                </ul>
         </div>
     </div>
     <p>&copy; 2024 معرض اليمامة للزهور جميع الحقوق محفوظة</p>
@@ -71,7 +71,6 @@
     const left = document.querySelector(".hidden-left");
     const right = document.querySelector(".hidden-right");
 
-    // تأخير خفيف للتأثير الجمالي
     setTimeout(() => {
       left.classList.add("show");
       right.classList.add("show");
