--- a/products.html
+++ b/products.html
@@ -27,7 +27,6 @@
 <section class="flowers-section">
     <h2>أفضل الزهور لدينا</h2>
     <div class="flowers-container">
-        <!-- بطاقة زهرة واحدة -->
         <div class="flower-card">
             <img src="assest/image/fe8fd7c5-d69a-46ef-b273-568f5f2ca366.png" alt="زهرة الورد">
             <h3>باقة ورد أحمر</h3>
@@ -74,10 +73,10 @@
         <div class="social-links">
             <h3>تواصل معنا</h3>
             <ul>
-                <li><a href="www.facebook.com">فيسبوك</a></li>
-                <li><a href="www.instagram.com">إنستجرام</a></li>
-                <li><a href="www.whatsapp.com">واتساب</a></li>
-            </ul>
+                    <li><a href="https://www.facebook.com">فيسبوك</a></li>
+                    <li><a href="https://www.instagram.com">إنستغرام</a></li>
+                    <li><a href="https://www.whatsapp.com">واتساب</a></li>
+                </ul>
         </div>
     </div>
     <p>&copy; 2024 معرض اليمامة للزهور جميع الحقوق محفوظة</p>
