--- a/cart.html
+++ b/cart.html
@@ -49,10 +49,10 @@
         <div class="social-links">
             <h3>تواصل معنا</h3>
             <ul>
-                <li><a href="www.facebook.com">فيسبوك</a></li>
-                <li><a href="www.instagram.com">إنستغرام</a></li>
-                <li><a href="www.whatsapp.com">واتساب</a></li>
-            </ul>
+                    <li><a href="https://www.facebook.com">فيسبوك</a></li>
+                    <li><a href="https://www.instagram.com">إنستغرام</a></li>
+                    <li><a href="https://www.whatsapp.com">واتساب</a></li>
+                </ul>
         </div>
     </div>
     <p>&copy; 2024 معرض اليمامة للزهور جميع الحقوق محفوظة</p>
