--- a/view.html
+++ b/view.html
@@ -36,33 +36,34 @@
         <h2>انواع الزهور</h2>
         <div class="flowers-container">
             <div class="flower-card">
-                <img src="assest/image/fe8fd7c5-d69a-46ef-b273-568f5f2ca366.png" alt="زهرة الورد" />
+                <img src="assest/image/طبيعي3.jpg" alt="ورد احمر " />
                 <h3>باقة ورد أحمر</h3>
                 <p class="price">50 ليرة سورية</p>
                 <a href="products.html" class="btn">عرض التفاصيل</a>
             </div>
 
             <div class="flower-card">
-                <img src="assest/image/96f7b296-9474-4571-87c6-f963ac6e81f5.png" alt="زهرة اللافندر" />
+                <img src="assest/image/طبيعي 4.png" alt="زهرة اللافندر" />
                 <h3>باقة لافندر</h3>
                 <p class="price">45 ليرة سورية</p>
                 <a href="products.html" class="btn">عرض التفاصيل</a>
             </div>
 
             <div class="flower-card">
-                <img src="assest/image/69bec086-5a2d-41f6-9e9c-330a36386b98.png" alt="زهرة الديزي" />
-                <h3>باقة ديزي</h3>
+                <img src="assest/image/صناعي1.jpg" alt="باقة ورد زهري وابيض صناعي " />
+                <h3> باقة ورد زهري وابيض صناعي</h3>
                 <p class="price">40 ليرة سورية</p>
                 <a href="products.html" class="btn">عرض التفاصيل</a>
             </div>
 
             <div class="flower-card">
-                <img src="assest/image/f124e1ca-a4c5-4bd0-924c-f4e81467061a.png" alt="زهرة التوليب" />
-                <h3>باقة توليب</h3>
+                <img src="assest/image/صناعي4.jpg" alt="باقة جوري زهر " />
+                <h3> باقة جوري زهر </h3>
                 <p class="price">60 ليرة سورية</p>
                 <a href="products.html" class="btn">عرض التفاصيل</a>
             </div>
         </div>
+        <center><a href="products.html" class="btn" style="margin-top: 20px;">مشاهدة المزيد </a></center>
     </section>
     <!-- END VIEW FLOWERS -->
 
@@ -101,7 +102,7 @@
                 </ul>
             </div>
         </div>
-        <p>&copy; 2024 معرض اليمامة للزهور جميع الحقوق محفوظة</p>
+        <p>&copy; 2025 معرض اليمامة للزهور جميع الحقوق محفوظة</p>
     </footer>
     <!-- END FOOTER -->
 
