--- a/cart.html
+++ b/cart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -55,7 +55,7 @@
                 </ul>
         </div>
     </div>
-    <p>&copy; 2024 معرض اليمامة للزهور جميع الحقوق محفوظة</p>
+    <p>&copy; 2025 معرض اليمامة للزهور جميع الحقوق محفوظة</p>
 </footer>
 <!-- END FOOTER  -->
 
