--- a/cart.html
+++ b/cart.html
@@ -25,7 +25,7 @@
 
 
 <!-- Start Cart  -->
-<section class="cart-section" >
+<section class="cart-section" dir="rtl">
     <center>
     <h2>سلتك</h2>
     <div id="cart-items" class="cart-container"></div>
